--- a/Hotsos.html
+++ b/Hotsos.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8">
 <link rel="stylesheet" href="Style.css">
 <head>
     <meta charset="UTF-8">
