--- a/Hotsos.html
+++ b/Hotsos.html
@@ -31,6 +31,7 @@
         </nav>
     </header>
     <main>
+        <div class="Alignment">
         <div class="container1">
             <h2>Short Notes</h2>
             <a href="/Html files/short notes.html">Click Here for Short Notes</a>
@@ -40,11 +41,10 @@
             <a href="/Html files/Essay.html">Click here for Essays</a>
         </div>
         <br>
-        <div class="box1">
             <div class="container3">
                 <h2>Writing</h2>
                 <a href="/Html files/Writing.html">Click here for Application Writing, Notice Writing etc.</a>
-            </div>
+          </div>
             <div class="container4">
                 <h2>Word Meanings</h2>
                 <a href="/Html files/Word Meaning.html">Click here for Word Meanings</a>
