--- a/Word Meaning.html
+++ b/Word Meaning.html
@@ -28,9 +28,16 @@
         <dd>Search through our dictionary and word banks.<br>
          Check out our collection of words, defination, slangs, word origin and a lot more.</dd>
     </dl>
-    <div>
-        <a href="#">
-            <img src="" alt="" width="100" height="132">
+    <div class="Buttonsofsearch">
+         <input type="button" id="#" value="#">
+        <input type="button" id="ABC" value="ABC">
+        <input type="button" id="DEF" value="DEF">
+        <input type="button" id="IJK" value="IJK">
+        <input type="button" id="LMN" value="LMN">
+        <input type="button" id="OPQ" value="OPQ">
+        <input type="button" id="RST" value="RST">
+        <input type="button" id="UVW" value="UVW">
+        <input type="button" id="XYZ" value="XYZ">
     </div>
     </div>
 </div>
