--- a/short notes.html
+++ b/short notes.html
@@ -7,12 +7,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Short Notes</title>
     <style>
+        @media only screen and (max-width: 950px) {
+            body {
+                background-color: lightblue;
+                margin: 0;
+                padding: 0;
+            }
+            p{
+                flex-wrap: wrap;
+            }
+            h1{
+                text-align: center;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+            #search{
+                margin: 0;
+                padding: 0;
+                display: flex;
+                width: ;
+            }
+        }
+        @media only screen and (max-width: 300px) {
+            #search{
+                width: 10vw;
+            }
+        }
         #search {
-            width: 200vh;
-            margin: 49px;
-            padding-left: 35px;
+            width: 90vw;
+            margin-right: 3vw;
+            margin-left: 3vw;
+            margin-top: 3vh;
+            padding-left: 3vw;
             height: 8vh;
             border-radius: 10px;
+        }
+
+        h2 {
+            color: green;
+            display: flex;
+        }
+
+        p {
+            display: flex;
         }
     </style>
 </head>
@@ -47,18 +85,29 @@
         <p>Albert Einstein, (born March 14, 1879, Ulm, Württemberg, Germany—died April 18, 1955, Princeton, New Jersey,
             U.S.), German-born physicist who developed the special and general theories of relativity and won the Nobel
             Prize for Physics in 1921 for his explanation of the photoelectric effect.</p>
-            <h2>Aryabhatta</h2>
-            <p>Aryabhatta is a renowned mathematician and astronomer of ancient India. He was born in 476 CE in Bihar. He studied at the University of Nalanda. One of his major works was Aryabhatiya written in 499 AD.</p>
-            <h2>Isaac Newton</h2>
-            <p>Born in 1643 in Woolsthorpe, England, Sir Isaac Newton began developing his theories on light, calculus and celestial mechanics while on break from Cambridge University. Years of research culminated with the 1687 publication of “Principia,” a landmark work that established the universal laws of motion and gravity.</p>
-            <h2>Tiranga</h2>
-            <p>Tiranga, which means “three colours” or “tricoloured,” is the common name for the national flag. It's a horizontal tricolour with deep saffron at the top, white in the middle, and the Ashoka Chakra, a 24-spoke wheel in navy blue in its centre; and green at the bottom.</p>
-            <h2>Anger</h2>
-            <p>Anger is a weakness but people think of it as a strength. In actuality, the person who does not display anger has more inner strength than the one who displays it. First, the sparks set you on fire and then you burn others. So, that fire not only hurts you, but hurts others as well.</p>
-            <h2>Determination</h2>
-            <p>Determination Entent is a positive emotional feeling that involves persevering towards a difficult goal in spite of obstacles. Determination occurs prior to goal attainment and serves to motivate behavior that will help achieve one's goal.</p>
-            <h2>Will Power</h2>
-            <p>Willpower is the ability to resist short-term gratification in pursuit of long-term goals or objectives. Willpower is correlated with positive life outcomes such as better grades, higher self-esteem, lower substance abuse rates, greater financial security, and improved physical and mental health.</p>
+        <h2>Aryabhatta</h2>
+        <p>Aryabhatta is a renowned mathematician and astronomer of ancient India. He was born in 476 CE in Bihar. He
+            studied at the University of Nalanda. One of his major works was Aryabhatiya written in 499 AD.</p>
+        <h2>Isaac Newton</h2>
+        <p>Born in 1643 in Woolsthorpe, England, Sir Isaac Newton began developing his theories on light, calculus and
+            celestial mechanics while on break from Cambridge University. Years of research culminated with the 1687
+            publication of “Principia,” a landmark work that established the universal laws of motion and gravity.</p>
+        <h2>Tiranga</h2>
+        <p>Tiranga, which means “three colours” or “tricoloured,” is the common name for the national flag. It's a
+            horizontal tricolour with deep saffron at the top, white in the middle, and the Ashoka Chakra, a 24-spoke
+            wheel in navy blue in its centre; and green at the bottom.</p>
+        <h2>Anger</h2>
+        <p>Anger is a weakness but people think of it as a strength. In actuality, the person who does not display anger
+            has more inner strength than the one who displays it. First, the sparks set you on fire and then you burn
+            others. So, that fire not only hurts you, but hurts others as well.</p>
+        <h2>Determination</h2>
+        <p>Determination Entent is a positive emotional feeling that involves persevering towards a difficult goal in
+            spite of obstacles. Determination occurs prior to goal attainment and serves to motivate behavior that will
+            help achieve one's goal.</p>
+        <h2>Will Power</h2>
+        <p>Willpower is the ability to resist short-term gratification in pursuit of long-term goals or objectives.
+            Willpower is correlated with positive life outcomes such as better grades, higher self-esteem, lower
+            substance abuse rates, greater financial security, and improved physical and mental health.</p>
         <h2 style="color:red; text-decoration: underline;">Trending</h2>
     </main>
 </body>
