--- a/Hotsos.html
+++ b/Hotsos.html
@@ -3,6 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8">
 <link rel="stylesheet" href="Style.css">
+<link rel="icon" type="image/x-icon" href="hotsos.gif">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <head>
     <title>"Best Website for Short Notes, Essays, Writing, Word Meanings etc"</title>
