--- a/Writing.html
+++ b/Writing.html
@@ -195,7 +195,7 @@
             <a href="/Html files/format2.html"> <button id="but2">SELECT</button></a>
         </div>
     </main>
-    <footer class="flex-all-center">
+    <footer>
         <p id="footer">Copyright &copy; HOTSOS.com</p>
     </footer>
 </body>
