--- a/Plays.html
+++ b/Plays.html
@@ -83,7 +83,7 @@ Skits
         et excepturi eveniet ducimus sint quis commodi, tempora veritatis quia, ex magni maxime repellendus assumenda. Nostrum alias 
        <br>
         Person2: architecto vel fugiat repellat facilis, harum consectetur, laudantium iusto incidunt ratione explicabo voluptates neque 
-        voluptatem suscipit. Temporibus, placeat. Eum blanditiis praesentium necessitatibus voluptatibus vero dignissimos dolor, 
+        voluptatem suscipit. Temporibus, placeat. Eum blanditiis praesentium necesstatibus voluptatibus vero dignissimos dolor, 
         exercitationem nihil deleniti quibusdam dolores ratione ea delectus minus velit tempore rerum molestiae consequatur fuga 
        <br>
         Person3: iusto repudiandae. Enim, animi, aperiam deleniti ratione suscipit adipisci corrupti laboriosam explicabo, repellendus repellat 
