--- a/Hotsos.html
+++ b/Hotsos.html
@@ -1,5 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+    <script>
+	function search_articles() {
+    let input = document.getElementById('search').value
+    input=input.toLowerCase();
+    let x = document.getElementsByClassName('articles');
+      
+    for (i = 0; i < x.length; i++) { 
+        if (!x[i].innerHTML.toLowerCase().includes(input)) {
+            x[i].style.display="none";
+        }
+        else {
+            x[i].style.display="list-item";                 
+        }
+    }
+}
+</script>
 
 <head>
     <meta charset="UTF-8">
